--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +10,47 @@
     <link rel="stylesheet" href="node_modules/mdbootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/mdbootstrap/css/mdb.min.css">
     <link rel="stylesheet" href="node_modules/mdbootstrap/css/style.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow:wght@800&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Hello World</h1>
-    <p>ciao</p>
+    <div class="border-style">
+    <!-- Header  with Navbar -->
+        <section id="title">
+            <nav class="fixed navbar navbar-expand-sm nav-style justify-content-center text-uppercase">
+                <ul class="navbar-nav">
+                    <li class="nav-item style-item">
+                        <a class="nav-link underline-menu-style" href="#">Home</a>
+                    </li>
+                    <li class="nav-item style-item">
+                        <a class="nav-link underline-menu-style" href="#">About me</a>
+                    </li>
+                    <a class="navbar-brand" href="#">
+                        <div class="width-img-built-style">
+                            <img class="built-by-style" src="/assets/images/builtBy.png" alt="Built By Simone Milanesio">
+                        </div>
+                        <img class="profile-img" src="/assets/images/ciaociao.jpg" alt="My picture">
+                    </a>
+                    <li class="nav-item style-item">
+                        <a class="nav-link underline-menu-style" href="#">Skills</a>
+                    </li>
+                    <li class="nav-item style-item">
+                        <a class="nav-link underline-menu-style" href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <h1 id="nameTitle" class="text-center">Simone Milanesio</h1>
+        </section>
+     <!--/ .Header with Navbar-->
+    </div>
+    
+
+    
 </body>
 <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script>
 <script type="text/javascript" src="node_modules/mdbootstrap/js/popper.min.js"></script>
 <script type="text/javascript" src="node_modules/mdbootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="node_modules/mdbootstrap/js/mdb.min.js"></script>
+
 </html>
