--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Portfolio</title>
+    <link rel="icon" href="./assets/images/logo.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <link rel="stylesheet" href="node_modules/mdbootstrap/css/bootstrap.min.css">
@@ -16,41 +17,265 @@
 
 <body>
     <div class="border-style">
-    <!-- Header  with Navbar -->
-        <section id="title">
-            <nav class="fixed navbar navbar-expand-sm nav-style justify-content-center text-uppercase">
-                <ul class="navbar-nav">
+        <button id="topBtn"><i class="fas fa-arrow-up"></i></button>
+        <header id="title">
+            <nav class="navbar navbar-expand-sm nav-style justify-content-center text-uppercase">
+                <ul class="navbar-nav smooth-scroll">
                     <li class="nav-item style-item">
-                        <a class="nav-link underline-menu-style" href="#">Home</a>
+                        <a class="nav-link underline-menu-style" href="#about">About me</a>
                     </li>
                     <li class="nav-item style-item">
-                        <a class="nav-link underline-menu-style" href="#">About me</a>
+                        <a class="nav-link underline-menu-style" href="#skills">Skills</a>
                     </li>
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="/index.html">
                         <div class="width-img-built-style">
-                            <img class="built-by-style" src="/assets/images/builtBy.png" alt="Built By Simone Milanesio">
+                            <img class="built-by-style" src="/assets/images/builtBy.png"
+                                alt="Built By Simone Milanesio">
                         </div>
-                        <img class="profile-img" src="/assets/images/ciaociao.jpg" alt="My picture">
+                        <img class="profile-img" src="/assets/images/logo.png" alt="My picture">
                     </a>
                     <li class="nav-item style-item">
-                        <a class="nav-link underline-menu-style" href="#">Skills</a>
+                        <a class="nav-link underline-menu-style" href="#project">Project</a>
                     </li>
                     <li class="nav-item style-item">
-                        <a class="nav-link underline-menu-style" href="#">Contact</a>
+                        <a class="nav-link underline-menu-style" href="#contact">Contact</a>
                     </li>
                 </ul>
             </nav>
-            <h1 id="nameTitle" class="text-center">Simone Milanesio</h1>
-        </section>
-     <!--/ .Header with Navbar-->
-    </div>
-    
+            <div class="name">
+                <p class="logo-color p-content-space">Hello, my name is</p>
+                <h1 class="nameTitle">Simone Milanesio.<br><span id="arrayTitle">I'm</span></h1>
+                <p class="p-space">I'm a computer science student based in Turin, IT.<br>Future Web Developer and a very
+                    sports lover. </p>
+                <a href="mailto:simomilanesio5@gmail.com">
+                    <button type="button" class="btn btn-outline-default waves-effect">Get in touch</button>
+                </a>
 
-    
+            </div>
+        </header>
+        <section id="about" class="profile">
+            <div id="" class="container-md container-lg container-sm">
+                <div class="row">
+                    <div class="col-md-6 col-lg-6">
+                        <h3><span class="logo-color title-paragh-size">01.</span> About Me</h3>
+                        <p>Hello! I'm Simone, I'm 29 years old and I started learning to code three years ago when I
+                            decided to came back to
+                            study Computer Science to high
+                            school based in Moncalieri, in the discrict of Turin.<br> This year I will start a course of
+                            study at the <span class="important-word">Computer Science Department of the University of
+                                Turin</span>.<br>I began to code with a
+                            little bit of C language and then I switched to others languages and frameworks such as
+                            Java, React, a little bit of Node.js and others.</p>
+                    </div>
+                    <div class="col-md-4 col-lg-4">
+                        <div class="distance">
+                            <img src="./assets/images/ciaociao.jpg"
+                                class="img-fluid z-depth-3 rounded-circle border-img" alt="Image">
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <section id="skills">
+            <div class="container-sm container-md container-lg">
+                <h3 class="posit-skill"><span class="logo-color title-paragh-size">02.</span> Skills</h3>
+                <div class="bar-1">
+                    <div class="title skill">HTML5</div>
+                    <div class="bar" data-width="80%">
+                        <div class="bar-inner">
+                        </div>
+                        <div class="bar-percent">80%</div>
+                    </div>
+                </div>
+                <div class="bar-1">
+                    <div class="title">CSS3</div>
+                    <div class="bar" data-width="70%">
+                        <div class="bar-inner">
+                        </div>
+                        <div class="bar-percent">70%</div>
+                    </div>
+                </div>
+                <div class="bar-1">
+                    <div class="title">Javascript</div>
+                    <div class="bar" data-width="50%">
+                        <div class="bar-inner">
+                        </div>
+                        <div class="bar-percent">50%</div>
+                    </div>
+                </div>
+                <div class="bar-1">
+                    <div class="title">JQuery</div>
+                    <div class="bar" data-width="50%">
+                        <div class="bar-inner">
+                        </div>
+                        <div class="bar-percent">50%</div>
+                    </div>
+                </div>
+                <div class="bar-1">
+                    <div class="title">Java</div>
+                    <div class="bar" data-width="75%">
+                        <div class="bar-inner">
+                        </div>
+                        <div class="bar-percent">75%</div>
+                    </div>
+                </div>
+                <div class="bar-1">
+                    <div class="title">ReactJS</div>
+                    <div class="bar" data-width="60%">
+                        <div class="bar-inner">
+                        </div>
+                        <div class="bar-percent">60%</div>
+                    </div>
+                </div>
+                <div class="bar-1">
+                    <div class="title">Node.js</div>
+                    <div class="bar" data-width="60%">
+                        <div class="bar-inner">
+                        </div>
+                        <div class="bar-percent">60%</div>
+                    </div>
+                </div>
+                <div class="bar-1">
+                    <div class="title">SQL</div>
+                    <div class="bar" data-width="90%">
+                        <div class="bar-inner">
+                        </div>
+                        <div class="bar-percent">90%</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="project">
+            <h3 class=""><span class="logo-color title-paragh-size">03.</span> My project</h3>
+            <div class="row row-cols-1 row-cols-md-3">
+                <div class="col mb-4">
+                    <div class="card">
+                        <div class="view overlay">
+                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
+                                alt="Card image cap">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Card title</h4>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Read more</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <div class="view overlay">
+                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
+                                alt="Card image cap">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Card title</h4>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Read more</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <div class="view overlay">
+                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
+                                alt="Card image cap">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Card title</h4>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Read more</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <div class="view overlay">
+                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
+                                alt="Card image cap">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Card title</h4>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Read more</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <div class="view overlay">
+                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
+                                alt="Card image cap">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Card title</h4>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Read more</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <div class="view overlay">
+                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
+                                alt="Card image cap">
+                            <a href="#!">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Card title</h4>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Read more</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer id="contact">
+            <div class="container-lg container-md container-sm">
+                <h3 class="logo-color title-paragh-size">04.What's next?</h3>
+                <h1>Get In Touch</h1>
+                <h4>If you love to develop WebSite or App as much as I do</h4>
+                <p>Contact me! We can exchange opinions, suggestions or we can collaborate for some projects!</p>
+                <a href="mailto:simomilanesio5@gmail.com">
+                    <button type="button" class="btn btn-outline-default waves-effect">Say Hello!</button>
+                </a>
+              </div>
+              <p class="footer-copy">© <span id="year"></span> Built by Simone Milanesio</p>
+        </footer>
+    </div>
 </body>
+
 <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script>
 <script type="text/javascript" src="node_modules/mdbootstrap/js/popper.min.js"></script>
 <script type="text/javascript" src="node_modules/mdbootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="node_modules/mdbootstrap/js/mdb.min.js"></script>
+<script type="text/javascript" src="./assets/javascript/index.js"></script>
 
 </html>
