Added social links, email and some mobile changes.

--- a/index.html
+++ b/index.html
@@ -50,9 +50,19 @@
                 <a href="mailto:simomilanesio5@gmail.com">
                     <button type="button" class="btn btn-outline-default waves-effect">Get in touch</button>
                 </a>
-
             </div>
         </header>
+        <div class="social">
+            <a class="footer-link" href="https://www.linkedin.com/in/simone-milanesio-917753182/"><i
+                    class="fab fa-linkedin"></i></a>
+            <a class="footer-link" href="https://www.facebook.com/AboutMe91"><i class="fab fa-facebook-square"></i></a>
+            <a class="footer-link" href="https://twitter.com/SimoneMilaFit91"><i class="fab fa-twitter-square"></i></a>
+        </div>
+        <div orientation="left" class="line-left"></div>
+        <div class="email-right">
+            <a href="mailto:simomilanesio5@gmail.com">simomilanesio5@gmail.com</a>
+        </div>
+        <div orientation="right" class="line-right"></div>
         <section id="about" class="profile">
             <div id="" class="container-md container-lg container-sm">
                 <div class="row">
@@ -266,8 +276,8 @@
                 <a href="mailto:simomilanesio5@gmail.com">
                     <button type="button" class="btn btn-outline-default waves-effect">Say Hello!</button>
                 </a>
-              </div>
-              <p class="footer-copy">© <span id="year"></span> Built by Simone Milanesio</p>
+            </div>
+            <p class="footer-copy">© <span id="year"></span> Built by Simone Milanesio</p>
         </footer>
     </div>
 </body>
