--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </section>
         <section id="project">
             <h3 class=""><span class="logo-color title-paragh-size">03.</span> My project</h3>
-            <div class="row row-cols-1 row-cols-md-3">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-3">
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
