Added Instagram link and changed some css classes.

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
             </div>
         </header>
         <div class="social">
-            <a class="footer-link" href="https://www.linkedin.com/in/simone-milanesio-917753182/"><i
+            <a class="footer-link" target="_blank" href="https://www.instagram.com/simo_milanesio/"><i class="fab fa-instagram"></i></a>
+            <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/simone-milanesio-917753182/"><i
                     class="fab fa-linkedin"></i></a>
-            <a class="footer-link" href="https://www.facebook.com/AboutMe91"><i class="fab fa-facebook-square"></i></a>
-            <a class="footer-link" href="https://twitter.com/SimoneMilaFit91"><i class="fab fa-twitter-square"></i></a>
+            <a class="footer-link" target="_blank" href="https://www.facebook.com/AboutMe91"><i class="fab fa-facebook-square"></i></a>
+            <a class="footer-link" target="_blank" href="https://twitter.com/SimoneMilaFit91"><i class="fab fa-twitter-square"></i></a>
         </div>
         <div orientation="left" class="line-left"></div>
         <div class="email-right">
