--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="icon" href="./assets/images/logo.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <link rel="stylesheet" href="node_modules/mdbootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/mdbootstrap/css/mdb.min.css">
-    <link rel="stylesheet" href="node_modules/mdbootstrap/css/style.css">
+    <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/css/mdb.min.css">
+    <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/css/style.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow:wght@800&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script>
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/popper.min.js"></script>
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/mdb.min.js"></script>
-    <script type="text/javascript" src="./assets/javascript/index.js"></script>
+    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/jquery.min.js"></script>
+    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/popper.min.js"></script>
+    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact//assets/javascript/index.js"></script>
 </head>
 <body>
     <div class="border-style">
