--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
     <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/css/mdb.min.css">
     <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/css/style.css">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow:wght@800&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/jquery.min.js"></script>
-    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/popper.min.js"></script>
-    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/mdb.min.js"></script>
-    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact//assets/javascript/index.js"></script>
 </head>
 <body>
     <div class="border-style">
@@ -285,5 +280,10 @@
             <p class="footer-copy">© <span id="year"></span> Built by Simone Milanesio</p>
         </footer>
     </div>
+    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/jquery.min.js"></script>
+    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/popper.min.js"></script>
+    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/assets/javascript/index.js"></script>
 </body>
 </html>
