--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                     <li class="nav-item style-item">
                         <a class="nav-link underline-menu-style" href="#skills">Skills</a>
                     </li>
-                    <a class="navbar-brand" href="/index.html">
+                    <a class="navbar-brand" href="https://simomila91.github.io/firstProjectStart2Impact/index.html">
                         <div class="width-img-built-style">
-                            <img class="built-by-style" src="/assets/images/builtBy.png"
+                            <img class="built-by-style" src="https://simomila91.github.io/firstProjectStart2Impact/assets/images/builtBy.png"
                                 alt="Built By Simone Milanesio">
                         </div>
-                        <img class="profile-img" src="/assets/images/logo.png" alt="My picture">
+                        <img class="profile-img" src="https://simomila91.github.io/firstProjectStart2Impact/assets/images/logo.png" alt="My picture">
                     </a>
                     <li class="nav-item style-item">
                         <a class="nav-link underline-menu-style" href="#project">Project</a>
@@ -79,7 +79,7 @@
                     </div>
                     <div class="col-md-4 col-lg-4">
                         <div class="distance">
-                            <img src="./assets/images/ciaociao.jpg"
+                            <img src="https://simomila91.github.io/firstProjectStart2Impact/assets/images/ciaociao.jpg"
                                 class="img-fluid z-depth-3 rounded-circle border-img" alt="Image">
                         </div>
                     </div>
