--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Portfolio</title>
     <link rel="icon" href="./assets/images/logo.png">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/css/mdb.min.css">
-    <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/css/style.css">
+    <!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://simomila91.github.io/firstProjectStart2Impact/assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow:wght@800&display=swap" rel="stylesheet">
 </head>
@@ -280,10 +283,14 @@
             <p class="footer-copy">© <span id="year"></span> Built by Simone Milanesio</p>
         </footer>
     </div>
-    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/jquery.min.js"></script>
-    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/popper.min.js"></script>
-    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/node_modules/mdbootstrap/js/mdb.min.js"></script>
+    <!-- JQuery -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
     <script type="text/javascript" src="https://simomila91.github.io/firstProjectStart2Impact/assets/javascript/index.js"></script>
 </body>
 </html>
