--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Portfolio</title>
     <link rel="icon" href="./assets/images/logo.png">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <link rel="stylesheet" href="node_modules/mdbootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/mdbootstrap/css/mdb.min.css">
     <link rel="stylesheet" href="node_modules/mdbootstrap/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow:wght@800&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="./assets/javascript/index.js" async></script>
+    <script type="text/javascript" src="assets/javascript/index.js" async></script>
     <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script>
     <script type="text/javascript" src="node_modules/mdbootstrap/js/popper.min.js"></script>
     <script type="text/javascript" src="node_modules/mdbootstrap/js/bootstrap.min.js"></script>
@@ -31,12 +31,12 @@
                     <li class="nav-item style-item">
                         <a class="nav-link underline-menu-style" href="#skills">Skills</a>
                     </li>
-                    <a class="navbar-brand" href="/index.html">
+                    <a class="navbar-brand" href="index.html">
                         <div class="width-img-built-style">
-                            <img class="built-by-style" src="/assets/images/builtBy.png"
+                            <img class="built-by-style" src="assets/images/builtBy.png"
                                 alt="Built By Simone Milanesio">
                         </div>
-                        <img class="profile-img" src="/assets/images/logo.png" alt="My picture">
+                        <img class="profile-img" src="assets/images/logo.png" alt="My picture">
                     </a>
                     <li class="nav-item style-item">
                         <a class="nav-link underline-menu-style" href="#project">Project</a>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="col-md-4 col-lg-4">
                         <div class="distance">
-                            <img src="./assets/images/ciaociao.jpg"
+                            <img src="assets/images/ciaociao.jpg"
                                 class="img-fluid z-depth-3 rounded-circle border-img" alt="Image">
                         </div>
                     </div>
