try to solve 13

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Portfolio</title>
     <link rel="icon" href="./assets/images/logo.png">
-   <!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<!-- Google Fonts -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-<!-- Bootstrap core CSS -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-<!-- Material Design Bootstrap -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow:wght@800&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="assets/javascript/index.js" async></script>
-
+    <script type="text/javascript" src="javascript/index.js"></script>
 </head>
+
 <body>
     <div class="border-style">
         <button id="topBtn"><i class="fas fa-arrow-up"></i></button>
@@ -32,8 +32,7 @@
                     </li>
                     <a class="navbar-brand" href="index.html">
                         <div class="width-img-built-style">
-                            <img class="built-by-style" src="assets/images/builtBy.png"
-                                alt="Built By Simone Milanesio">
+                            <img class="built-by-style" src="assets/images/builtBy.png" alt="Built By Simone Milanesio">
                         </div>
                         <img class="profile-img" src="assets/images/logo.png" alt="My picture">
                     </a>
@@ -56,11 +55,14 @@
             </div>
         </header>
         <div class="social">
-            <a class="footer-link" target="_blank" href="https://www.instagram.com/simo_milanesio/"><i class="fab fa-instagram"></i></a>
+            <a class="footer-link" target="_blank" href="https://www.instagram.com/simo_milanesio/"><i
+                    class="fab fa-instagram"></i></a>
             <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/simone-milanesio-917753182/"><i
                     class="fab fa-linkedin"></i></a>
-            <a class="footer-link" target="_blank" href="https://www.facebook.com/AboutMe91"><i class="fab fa-facebook-square"></i></a>
-            <a class="footer-link" target="_blank" href="https://twitter.com/SimoneMilaFit91"><i class="fab fa-twitter-square"></i></a>
+            <a class="footer-link" target="_blank" href="https://www.facebook.com/AboutMe91"><i
+                    class="fab fa-facebook-square"></i></a>
+            <a class="footer-link" target="_blank" href="https://twitter.com/SimoneMilaFit91"><i
+                    class="fab fa-twitter-square"></i></a>
         </div>
         <div orientation="left" class="line-left"></div>
         <div class="email-right">
@@ -83,8 +85,8 @@
                     </div>
                     <div class="col-md-4 col-lg-4">
                         <div class="distance">
-                            <img src="assets/images/ciaociao.jpg"
-                                class="img-fluid z-depth-3 rounded-circle border-img" alt="Image">
+                            <img src="assets/images/ciaociao.jpg" class="img-fluid z-depth-3 rounded-circle border-img"
+                                alt="Image">
                         </div>
                     </div>
                 </div>
@@ -285,12 +287,16 @@
         </footer>
     </div>
     <!-- JQuery -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<!-- MDB core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
 </body>
+
 </html>
