Updated my project section

--- a/index.html
+++ b/index.html
@@ -165,108 +165,83 @@
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
-                                alt="Card image cap">
-                            <a href="#!">
+                            <img class="card-img-top" src="assets/images/mysite.jpg" alt="Card image cap">
+                            <a href="https://simomila91.github.io/MySite/">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">My first portfolio</h4>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            <p class="card-text"></p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
+                                    href="https://simomila91.github.io/MySite/" target="_blank">Visit</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
-                                alt="Card image cap">
-                            <a href="#!">
+                            <img class="card-img-top" src="assets/images/tindog.jpg" alt="Card image cap">
+                            <a href="https://simomila91.github.io/TinDog/.">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Tindog</h4>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            <p class="card-text">
+                                A dog dating application!
+                                I only used HTML and CSS.</p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
+                                    href="https://simomila91.github.io/TinDog/." target="_blank">Visit</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
-                                alt="Card image cap">
+                            <img class="card-img-top" src="/assets/images/drumKit.jpg" alt="Card image cap">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Drum Kit</h4>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            <p class="card-text">
+                                A fun application where you can play digital drums.I know, it's not Real Drum but it's already something.</p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
+                                    href="https://simomila91.github.io/Drum-Kit/" target="_blank">Visit</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
-                                alt="Card image cap">
+                            <img class="card-img-top" src="assets/images/game.jpg" alt="Card image cap">
+                            <a href="https://simomila91.github.io/SimonGameChallange/">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Simon Game</h4>
+                            <p class="card-text">A simple game developed during a javascript course. Let's play? 😄</p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
+                                    href="https://simomila91.github.io/SimonGameChallange/">Visit</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <div class="view overlay">
+                            <img class="card-img-top" src="assets/images/todolist.jpg" alt="Card image cap">
                             <a href="#!">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Todo List</h4>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
+                            <p class="card-text">A todolist server side application developed with Jsx, Node and
+                                MongoDB.</p>
                             <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card">
-                        <div class="view overlay">
-                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
-                                alt="Card image cap">
-                            <a href="#!">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card">
-                        <div class="view overlay">
-                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
-                                alt="Card image cap">
-                            <a href="#!">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Read more</button>
                         </div>
                     </div>
                 </div>
