added target blank

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="card">
                         <div class="view overlay">
                             <img class="card-img-top" src="assets/images/mysite.jpg" alt="Card image cap">
-                            <a href="https://simomila91.github.io/MySite/">
+                            <a href="https://simomila91.github.io/MySite/" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
@@ -182,7 +182,7 @@
                     <div class="card">
                         <div class="view overlay">
                             <img class="card-img-top" src="assets/images/tindog.jpg" alt="Card image cap">
-                            <a href="https://simomila91.github.io/TinDog/.">
+                            <a href="https://simomila91.github.io/TinDog/." target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
@@ -200,7 +200,7 @@
                     <div class="card">
                         <div class="view overlay">
                             <img class="card-img-top" src="/assets/images/drumKit.jpg" alt="Card image cap">
-                            <a href="#!">
+                            <a href="https://simomila91.github.io/Drum-Kit/" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
@@ -217,7 +217,7 @@
                     <div class="card">
                         <div class="view overlay">
                             <img class="card-img-top" src="assets/images/game.jpg" alt="Card image cap">
-                            <a href="https://simomila91.github.io/SimonGameChallange/">
+                            <a href="https://simomila91.github.io/SimonGameChallange/" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
@@ -225,7 +225,7 @@
                             <h4 class="card-title">Simon Game</h4>
                             <p class="card-text">A simple game developed during a javascript course. Let's play? 😄</p>
                             <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
-                                    href="https://simomila91.github.io/SimonGameChallange/">Visit</a></button>
+                                    href="https://simomila91.github.io/SimonGameChallange/" target="_blank">Visit</a></button>
                         </div>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
                     <div class="card">
                         <div class="view overlay">
                             <img class="card-img-top" src="assets/images/todolist.jpg" alt="Card image cap">
-                            <a href="#!">
+                            <a href="#!" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
