--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="assets/images/mysite.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="assets/images/mysite.jpg" alt="Portfolio image">
                             <a href="https://simomila91.github.io/MySite/" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -181,7 +181,7 @@
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="assets/images/tindog.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="assets/images/tindog.jpg" alt="TinDog image">
                             <a href="https://simomila91.github.io/TinDog/." target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -199,7 +199,7 @@
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="/assets/images/drumKit.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="/assets/images/drumkit.jpg" alt="DrumKit image">
                             <a href="https://simomila91.github.io/Drum-Kit/" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -216,7 +216,7 @@
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="assets/images/game.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="assets/images/game.jpg" alt="game image">
                             <a href="https://simomila91.github.io/SimonGameChallange/" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -232,7 +232,7 @@
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="assets/images/todolist.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="assets/images/todolist.jpg" alt="Todolist image">
                             <a href="#!" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
