--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="assets/images/drumkit.jpg" alt="DrumKit image">
+                            <img class="card-img-top" src="assets/images/drumKit.jpg" alt="DrumKit image">
                             <a href="https://simomila91.github.io/Drum-Kit/" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
