added github link

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         <div class="social">
             <a class="footer-link" target="_blank" href="https://www.instagram.com/simo_milanesio/"><i
                     class="fab fa-instagram"></i></a>
+            <a class="footer-link" target="_blank" href="https://github.com/SimoMila91"><i
+                    class="fab fa-github"></i></a>
             <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/simone-milanesio-917753182/"><i
                     class="fab fa-linkedin"></i></a>
             <a class="footer-link" target="_blank" href="https://www.facebook.com/AboutMe91"><i
@@ -207,7 +209,8 @@
                         <div class="card-body">
                             <h4 class="card-title">Drum Kit</h4>
                             <p class="card-text">
-                                A fun application where you can play digital drums.I know, it's not Real Drum but it's already something.</p>
+                                A fun application where you can play digital drums.I know, it's not Real Drum but it's
+                                already something.</p>
                             <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
                                     href="https://simomila91.github.io/Drum-Kit/" target="_blank">Visit</a></button>
                         </div>
@@ -225,7 +228,8 @@
                             <h4 class="card-title">Simon Game</h4>
                             <p class="card-text">A simple game developed during a javascript course. Let's play? 😄</p>
                             <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
-                                    href="https://simomila91.github.io/SimonGameChallange/" target="_blank">Visit</a></button>
+                                    href="https://simomila91.github.io/SimonGameChallange/"
+                                    target="_blank">Visit</a></button>
                         </div>
                     </div>
                 </div>
