text changes and the favicon image deleted

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="name">
                 <p class="logo-color p-content-space">Hello, my name is</p>
                 <h1 class="nameTitle">Simone Milanesio.<br><span id="arrayTitle">I'm</span></h1>
-                <p class="p-space">I'm a computer science student based in Turin, IT.<br>Future Web Developer and a very
+                <p class="p-space">I'm a computer science student based in Turin, IT.<br>Future Web Developer and a 
                     sports lover. </p>
                 <a href="mailto:simomilanesio5@gmail.com">
                     <button type="button" class="btn btn-outline-default waves-effect">Get in touch</button>
@@ -76,7 +76,7 @@
                     <div class="col-md-6 col-lg-6">
                         <h3><span class="logo-color title-paragh-size">01.</span> About Me</h3>
                         <p>Hello! I'm Simone, I'm 29 years old and I started learning to code three years ago when I
-                            decided to came back to
+                            decided to come back to
                             study Computer Science to high
                             school based in Moncalieri, in the discrict of Turin.<br> This year I will start a course of
                             study at the <span class="important-word">Computer Science Department of the University of
