added secret diary cards and sd image

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
         </section>
         <section id="project">
-            <h3 class=""><span class="logo-color title-paragh-size">03.</span> My project</h3>
+            <h3 class=""><span class="logo-color title-paragh-size">03.</span>Some projects developed during courses</h3>
             <div class="row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-3">
                 <div class="col mb-4">
                     <div class="card">
@@ -230,6 +230,22 @@
                             <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
                                     href="https://simomila91.github.io/SimonGameChallange/"
                                     target="_blank">Visit</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <div class="view overlay">
+                            <img class="card-img-top" src="assets/images/secretdiary.jpg" alt="Secret Diary image">
+                            <a href="http://secretdiary.infinityfreeapp.com/" target="_blank">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Secret Diary</h4>
+                            <p class="card-text">
+                                An application where you can sign up and write a secret diary. Developed with HTML - CSS - PHP - SQL</p>
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect"><a href="http://secretdiary.infinityfreeapp.com/" target="_blank">Visit</a></button>
                         </div>
                     </div>
                 </div>
